# razbiram-anki

./: .gitignore  ANLEITUNG.md  BIBLE.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  start.sh  vite.config.ts
.claude/skills/session-end/: SKILL.md
.claude/skills/session-start/: SKILL.md
.github/workflows/: ci.yml
docs/: card-design.md  for-teachers.de.md
docs/img/: README.md
legacy/examples/: README.md  sample-deck.apkg  sample-enriched.json
legacy/src/razbiram_anki/: __init__.py  builder.py  models.py  templates.py
legacy/tests/: conftest.py  test_sync.py
scripts/: cdp-repro.mjs  gate.sh  session-snapshot.sh  smoke-decks.sh  state.sh  try-apkg.mts
src/: App.tsx  DeckJsonViewer.tsx  Guide.tsx  styles.css
src/apkg/: mediaManifest.test.ts  mediaManifest.ts  parse.test.ts  parse.ts  pickCollection.test.ts  sqlite.ts  types.ts  write.test.ts  write.ts
src/crowdanki/: cardType.ts  convert.test.ts  convert.ts  deckJson.test.ts  deckJson.ts  download.ts  loadDeckJson.test.ts  loadDeckJson.ts  summary.ts  types.ts  uuid.ts
src/example/: exampleDeck.test.ts  exampleDeck.ts
src/razbiram_anki/: anki_connect.py  cli.py  filters.py
src/style/: applyStyle.test.ts  applyStyle.ts  cardTheme.ts
tests/: test_builder.py  test_deck.py  test_filters.py
